fix 18n & z-index

--- a/src/scss/includes/z_index.scss
+++ b/src/scss/includes/z_index.scss
@@ -42,6 +42,10 @@
   z-index: 2;
 }
 
+.top_bar--search_focus {
+  z-index: 3;
+}
+
 .service_panel_mobile {
   z-index: 3;
 }
